# breakpad-cmake

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml  test.yml
example/smoke/: CMakeLists.txt  main.cpp
